# python-tryouts

./: .gitignore  Different-Kinds-of-Python-Frameworks-and-Implementations.md  Pipfile  README.md  installed-packages.md
advanced /recursive-functions/: is-power-of.ipynb
basics/: built-in-functions.ipynb  data-types.ipynb  dictionary.ipynb  errors.ipynb  functions.ipynb  guiding-principles-for-coding-in-Python.md  lists.ipynb  loops.ipynb  sets.ipynb  strings.ipynb
basics/hello-world/: README.md  hello-world.ipynb
docs/: README.md  SUMMARY.md  different-kinds-of-python-frameworks-and-implementations.md  python-annotations.md  python-library-ecosystem.md
docs/oop/: methods.md  (+1 more)
python-basics/: arithmetic-operators.ipynb  conditional-statements.ipynb  if-statements.ipynb  naming-conventions.md  optional.ipynb  tuples.ipynb
python-dependency-management/: PyPI-Trove-Classifiers.md  pipenv-commands.md  pipenv-environment-variables.md  pipfile-syntax.md
python-library-skeleton/: Python-Library-Best-Practices.md  logging_custom_handler_and_JSON_formatter.py
python-library-skeleton/abc_library/: README.md  pyproject.toml  setup.py
python-library-skeleton/abc_library/src/abc_library/: __init__.py
python-library-skeleton/abc_library/src/abc_library/package_a/: core.py  logging_demo_module.py
python-library-skeleton/abc_library/src/abc_library/package_b/: utils.py
python-logging/: README.md  logging_setup.py  requirements.txt  structlog_setup.py
python-oop/: classes.ipynb  documenting.ipynb
python-quick-reference/: csv.ipynb  read-n-write-files.ipynb
quick-reference/: file-path.ipynb  secrets-n-passwords.ipynb  subprocess.ipynb
(+30 files in other folders)
